--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,7 @@
 	margin: 0px;
 	padding: 0px;
 	max-width: 100%;
+	font-family: Arial;
 }
 
 html {
@@ -25,15 +26,34 @@ header #Vaise_logo {
 }
 
 #menu > li {
-	display: inline-block;
-	width: 24%;
+	float:left;
+	width: 18%;
+	margin: 0px 1%;
 }
 
 #menu li a {
 	display: block;
-	background-color: red;
+	background-color: #e44b00;
 	text-align: center;
 	text-decoration: none;
+	color: white;
+	line-height: 28px;
+}
+
+#menu #everyday a {
+	background-color: #8ea301
+}
+
+#menu #leisure a {
+	background-color: #0173a6
+}
+
+#menu #culture a {
+	background-color: #bc017c
+}
+
+#menu #links a {
+	background-color: #7e0095
 }
 
 #menu li ul {
