--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,14 +5,10 @@
 	font-family: Arial;
 }
 
-html {
-	background-color: white;
-}
-
 body {
-	background-color: white;
 	max-width: 900px;
-	margin: 0px auto;
+	margin: 0px auto !important;
+  position: relative;
 }
 
 header #Vaise_logo {
@@ -70,22 +66,13 @@ header #map {
 	display: none;
 }
 
-/*Test*/
-
-
-* {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
 .wrap_content {
-	margin-top:200px;
+	position: absolute;
+  margin-top: 20px;
   font-family: sans-serif;
 }
 
 /* ---- button ---- */
-
 .button {
   display: inline-block;
   padding: 10px 18px;
@@ -213,13 +200,3 @@ header #map {
 .element-item.diatomic        { background: #00F; background: hsl( 252, 100%, 50%); }
 .element-item.halogen         { background: #F0F; background: hsl( 288, 100%, 50%); }
 .element-item.noble-gas       { background: #F08; background: hsl( 324, 100%, 50%); }
-
-
-
-
-
-
-
-
-
-
