--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -249,8 +249,8 @@ header #Vaise_logo {
   float: left;
   max-width: 50%;
   max-height: 120px;
-  margin-right: 5px;
-  margin:6px;
+  margin: 6px;
+  margin-left: 0px;
 }
 
 #right h3,
@@ -269,6 +269,7 @@ header #Vaise_logo {
 
 footer {
   position: relative;
+  margin-top: 20px;
 }
 
 footer a,
