--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,53 +1,51 @@
 h2 
 {
 color: #5e5e5e;
-text-align: center;
+margin-left: 15px;
 }
 
-
-.contact_list_text h3,.contact_list_text p{
+.contact_list_title_container h3,p.contact_description,.contact_formulaire h3{
 	text-align:center;
 }
 
-.contact_list_text
+.contact_list_title_container h3
 {
 	color:white;
-/*	position:absolute;*/
+	bottom:0px;
+	width:100%;
+	height:20px;
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.5) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.5))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#80000000',GradientType=0 ); /* IE6-9 */
+	position:absolute;
 }
 
-.contact_list_text_container
+.contact_list_title_container
 {
 	position:relative;
-	top:-50px;
-	height:50px;
-	overflow:hidden;
-    background-color: rgba(0,0,0,0.5);
-	border:1px solid #5e5e5e;
-	border-radius: 5px 5px 0px 0px;
-	transition:all 1s;
+	
 } 
 
-@keyframes above
+.contact_list li.col-sm-4
 {
-	from{top:-50px;
-	height:50px;}
-	to{height:150px;
-	top:-150px;}
-
+	margin-bottom: 20px
 }
 
-@keyframes down
-{
-	from{top:-150px;
-	height:150px;}
-	to{height:50px;
-	top:-50px;}
-
+.contact_list_adresse span {
+margin-right: 5px;
+font-weight: bold;
 }
 
-.contact_list li:hover div.contact_list_text_container
+.contact_list_adresse
 {
+	margin-left:20px;
+}
 
-	height:200px;
-	top:-200px;
+.hidden
+{
+	display:none;
 }
