--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -487,6 +487,10 @@ footer #logograndlyon {
 }
 
 @media screen and (max-width: 767px) {
+  body > .container {
+    padding: 0px;
+  }
+
   header > a,
   header > img {
     display: none;
@@ -494,6 +498,7 @@ footer #logograndlyon {
 
   #menu {
     width: 100%;
+    margin-top: 0px;
   }
 
   .navbar-nav li {
